--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DuAn1_HoanThien</string>
+    <string name="app_name">Quản lý CLB</string>
     <string name="open">open</string>
     <string name="close">close</string>
     <string name="tieusu1">F.C. Barcelona</string>
